Added #full() method and fixed project config files